# FASTAPI-FALLM

./: .gitignore  Friday-gpt.postman_collection.json  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: master_dev-friday-backend.yml  master_wa-fridaygpt-fallm.yml
config/: app.ini  config.py
modules/: __init__.py  azure_ai_vector_search.py  azure_ai_vector_search_email.py  azure_ai_vector_search_glpi.py  chain.py  context.py  doc_local_search.py  documents.py  embeddings.py  exception.py  extractor.py  formater.py  google.py  input_params.py  llm.py  prompt.py  qa.py  queries.py  sourcer.py  splitter.py  token_counter.py  utils.py
test/: test_api.py
test/conversion/: ListTest.csv  chunk.py  clean_text.py  conversion_csv.py
test/files/: test_questions.xlsx
test/files/results_html/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  43.html  44.html  45.html  (+17 more)
test/html/: convert_b64_html.py  html_test.html
test/prompt/: extract_infos_chunks.py
test/scripts/: test.py
