[tool.poetry]
name = "fa-llm"
version = "0.1.0"
description = ""
authors = ["clementremillieux <clement.remillieux@gmail.com>"]
readme = "README.md"
packages = [{include = "fa_llm"}]

[tool.poetry.dependencies]
python = "3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
